@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.datadoghq</groupId>
     <artifactId>jplib</artifactId>
-    <version>0.14.0</version>
+    <version>0.15.0</version>
     <packaging>jar</packaging>
 
     <name>datadog-java-profiler</name>
@@ -70,6 +70,10 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <!-- JUnit 5 requires Surefire version 2.22.0 or higher -->
                 <version>2.22.2</version>
+                <configuration>
+                    <!-- This makes JOL complain less -->
+                    <argLine>-Djdk.attach.allowAttachSelf -Djol.tryWithSudo</argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
